--- a/curso.html
+++ b/curso.html
@@ -50,7 +50,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-2">
+            <div class="lesson active" id="lesson-2">
                 <h2>2. Lineamientos para el uso de las vías</h2>
                 <h3>Generales</h3>
                 <ul>
@@ -103,7 +103,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-3">
+            <div class="lesson active" id="lesson-3">
                 <h2>3. La Vía y su Entorno</h2>
                 <h3>Concepto</h3>
                 <ul>
@@ -142,7 +142,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-4">
+            <div class="lesson active" id="lesson-4">
                 <h2>4. Señalamiento Vial</h2>
                 <h3>Sistemas Mundiales de Señalamiento</h3>
                 <ul>
@@ -170,7 +170,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-5">
+            <div class="lesson active" id="lesson-5">
                 <h2>5. Señalamiento Vertical</h2>
                 <p>Con materiales retrorreflectivos se ubica en postes o lugares elevados y se divide en tres:</p>
                 <ul>
@@ -199,7 +199,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-6">
+            <div class="lesson active" id="lesson-6">
                 <h2>6. Señalamiento Horizontal</h2>
                 <p>Se pinta sobre la calzada (o superficie de rodamiento), borde de acera y espaldón con pintura acrílica, vinílica, termoplástica.</p>
                 <p>Las señales que están pintadas sobre la calzada tiene dos colores:</p>
@@ -231,7 +231,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-7">
+            <div class="lesson active" id="lesson-7">
                 <h2>7. Otras Marcas Horizontales</h2>
                 <h3>Carril exclusivo de giro a la izquierda</h3>
                 <ul>
@@ -296,7 +296,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-8">
+            <div class="lesson active" id="lesson-8">
                 <h2>8. Señalamiento Luminoso</h2>
                 <ul>
                     <li><strong>Semáforo Vehicular:</strong>
@@ -316,7 +316,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-9">
+            <div class="lesson active" id="lesson-9">
                 <h2>9. Curvas y Peralte</h2>
                 <h3>Curvas</h3>
                 <ul>
@@ -331,7 +331,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-10">
+            <div class="lesson active" id="lesson-10">
                 <h2>10. La Motocicleta: Introducción y Tipos</h2>
                 <h3>Características</h3>
                 <ul>
@@ -353,7 +353,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-11">
+            <div class="lesson active" id="lesson-11">
                 <h2>11. La Motocicleta: Chasis</h2>
                 <h3>BASTIDOR O CHASIS</h3>
                 <p class="subsection-title">Características</p>
@@ -380,7 +380,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-12">
+            <div class="lesson active" id="lesson-12">
                 <h2>12. La Motocicleta: Sistema Eléctrico</h2>
                 <h3>SISTEMA ELÉCTRICO</h3>
                 <p class="subsection-title">Características</p>
@@ -406,7 +406,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-13">
+            <div class="lesson active" id="lesson-13">
                 <h2>13. La Motocicleta: Sistema de Frenos</h2>
                 <p class="subsection-title">Características Generales</p>
                 <ul>
@@ -457,7 +457,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-14">
+            <div class="lesson active" id="lesson-14">
                 <h2>14. La Motocicleta: Sistema de Suspensión</h2>
                 <h3>Funciones principales</h3>
                 <ul>
@@ -514,7 +514,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-15">
+            <div class="lesson active" id="lesson-15">
                 <h2>15. La Motocicleta: Motor</h2>
                 <h3>Componentes principales</h3>
                 <ul>
@@ -550,7 +550,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-16">
+            <div class="lesson active" id="lesson-16">
                 <h2>16. La Motocicleta: Sistema de Transmisión</h2>
                 <h3>SISTEMA DE TRANSMISIÓN</h3>
                 <p class="subsection-title">Características</p>
@@ -585,7 +585,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-17">
+            <div class="lesson active" id="lesson-17">
                 <h2>17. La Motocicleta: Aceites y Lubricantes</h2>
                 <h3>ACEITES</h3>
                 <p class="subsection-title">Características</p>
@@ -622,7 +622,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-18">
+            <div class="lesson active" id="lesson-18">
                 <h2>18. La Motocicleta: Sistema de Dirección</h2>
                 <h3>SISTEMA DE DIRECCIÓN</h3>
                 <p class="subsection-title">Función</p>
@@ -651,7 +651,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-19">
+            <div class="lesson active" id="lesson-19">
                 <h2>19. La Motocicleta: Ruedas y Neumáticos</h2>
                 <h3>RUEDAS Y NEUMÁTICOS</h3>
                 <p class="subsection-title">Funciones principales</p>
@@ -747,7 +747,7 @@
                 </div>
                 </div>
 
-            <div class="lesson" id="lesson-20">
+            <div class="lesson active" id="lesson-20">
                 <h2>20. La Motocicleta: Otros Elementos Esenciales (Luces y Espejos)</h2>
                 <h3>OTROS ELEMENTOS</h3>
                 <p class="subsection-title">Luces</p>
@@ -762,7 +762,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-21">
+            <div class="lesson active" id="lesson-21">
                 <h2>21. Conducción de Motocicleta: Capacidad y Manejo del Pánico</h2>
                 <h3>Conducción</h3>
                 <p class="subsection-title">Capacidad de conducción</p>
@@ -809,7 +809,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-22">
+            <div class="lesson active" id="lesson-22">
                 <h2>22. Conducción: Postura, Pasajero y Carga</h2>
                 <h3>Postura para conducir</h3>
                 <p><strong>Postura General:</strong></p>
@@ -862,7 +862,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-23">
+            <div class="lesson active" id="lesson-23">
                 <h2>23. Conducción: Curvas</h2>
                 <p>No es una técnica única, sino combinación de <strong>frenada, giro y aceleración</strong>.</p>
                 <p>La inclinación es resultado de previsión (trazada, velocidad, marcha).</p>
@@ -913,7 +913,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-24">
+            <div class="lesson active" id="lesson-24">
                 <h2>24. Conducción: Frenada</h2>
                 <p>Condición de manejo crucial: bien utilizada salva de riesgos, mal utilizada los genera.</p>
                 <p>Importante conocer técnicas y desprenderse de prejuicios/miedos.</p>
@@ -983,7 +983,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-25">
+            <div class="lesson active" id="lesson-25">
                 <h2>25. Conducción: Situaciones Adversas</h2>
                 <h3>¿Qué son situaciones adversas?</h3>
                 <p>Toda situación donde capacidad de conducción se reduce por elementos externos.</p>
@@ -1044,7 +1044,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-26">
+            <div class="lesson active" id="lesson-26">
                 <h2>26. Factor Humano: Factores Físicos</h2>
                 <p><strong>Introducción:</strong> Diversos factores atribuibles a la condición física del conductor que pueden provocar accidentes.</p>
                 <h3>Sueño</h3>
@@ -1084,7 +1084,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-27">
+            <div class="lesson active" id="lesson-27">
                 <h2>27. Factor Humano: Factores Psicológicos</h2>
                 <p><strong>Introducción:</strong> Estudios indican que son los que más influyen en accidentes (más que vía, fallas mecánicas, etc.). Incluyen factores emocionales y enfermedades (estrés, depresión).</p>
                 <p>Recordar: aunque uno no los sufra, otros conductores sí pueden.</p>
@@ -1128,7 +1128,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-28">
+            <div class="lesson active" id="lesson-28">
                 <h2>28. Factor Humano: Factores Sociales</h2>
                 <p><strong>Introducción:</strong> Factores por interacción social que influencian conducción y alteran percepción realidad/riesgos. Incluye factores que afectan a otros actores viales.</p>
                 <h3>Comportamentales</h3>
@@ -1174,7 +1174,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-29">
+            <div class="lesson active" id="lesson-29">
                 <h2>29. Elementos Obligatorios</h2>
                 <h3>Casco</h3>
                 <ul>
@@ -1220,7 +1220,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-30">
+            <div class="lesson active" id="lesson-30">
                 <h2>30. Elementos Complementarios de Seguridad Pasiva</h2>
                 <p><strong>Definición:</strong> Sistemas de seguridad no obligatorios por ley, pero protegen y disminuyen traumatismos en accidentes.</p>
                 <p><strong>Tipos:</strong></p>
@@ -1233,7 +1233,7 @@
                 </ul>
             </div>
 
-            <div class="lesson" id="lesson-31">
+            <div class="lesson active" id="lesson-31">
                 <h2>31. Seguro Obligatorio de Automóviles (SOA)</h2>
                 <p><strong>¿Qué es?</strong></p>
                 <ul><li>Creado por ley de tránsito para cubrir lesión/muerte de personas víctimas de accidente tránsito.</li></ul>
@@ -1285,7 +1285,8 @@
             <button class="nav-button" id="prev-btn" disabled>Anterior</button>
             <button class="nav-button" id="next-btn">Siguiente</button>
         </div>
-    </div> <script>
+    </div> 
+    <script>
         // JavaScript for the tire calculator
         function calcularDiferencia() {
             // Get input values for original tire (T1)
@@ -1355,5 +1356,5 @@
             }
         }
     </script>
-    <script src="script.js"></script> </body>
+    <script src="scripst.js"></script> </body>
 </html>
