--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PuraMoto - Tu Asistente Motociclista Personal</title>
+    <title>PuraMotor - Tu Asistente Motociclista Personal</title>
     <link rel="stylesheet" href="style.css"> <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         /* Estilos adicionales mínimos y específicos para esta página si son necesarios */
@@ -179,37 +179,34 @@
 </head>
 <body>
 
-    <nav class="top-navbar">
-        <ul>
-            <li><a href="personal.html">Info Personal</a></li>
-            <li><a href="moto.html">Mis Motos</a></li>
-            <li><a href="curso.html">Curso</a></li>
-            <li><a href="descubre.html">Descubre</a></li>
-        </ul>
+    <nav class="bottom-bar">
+<a href="personal.html">Info Personal</a>
+<a href="moto.html">Mis Motos</a>
+<a href="descubre.html">Descubre</a>
     </nav>
 
     <div class="intro-container">
         <div class="logo-container">
-            <img src="https://placehold.co/300x300/FB8500/FFFFFF?text=PuraMoto" alt="Logo de PuraMoto">
+            <img src="pm.png" alt="Logo de PuraMotor">
         </div>
 
-        <h1>Bienvenido a PuraMoto</h1>
-        <p class="tagline">Tu compañero digital para la gestión integral de tus motocicletas.</p>
+        <h1>Bienvenido a PuraMotor</h1>
+        <p class="tagline">Tu compañero digital para la gestión integral de tus vehículos.</p>
 
         <p>
-            Con PuraMoto, lleva el control total de tus compañeras de ruta directamente en tu dispositivo.
+            Con PuraMotor, lleva el control total de tus compañeras de ruta directamente en tu dispositivo.
             Registra tu información personal esencial, como nombre, cédula, tipo de sangre y contacto de emergencia,
             para tenerla siempre a mano.
         </p>
         <p>
-            Añade todas tus motocicletas detallando placa, marca, modelo, año, VIN, color y kilometraje actual.
+            Añade todos tus vehículos detallando placa, marca, modelo, año, VIN, color y kilometraje actual.
             No pierdas de vista ningún mantenimiento: registra cada servicio, cambio de aceite, revisión de frenos y más.
-            Además, lleva un seguimiento preciso del consumo de combustible de cada una de tus motos.
+            Además, lleva un seguimiento preciso del consumo de combustible de cada una de tus máquinas.
         </p>
         <p>
             <strong>Toda tu información se almacena de forma segura y local en tu dispositivo.</strong>
             Genera reportes en PDF para tus archivos o exporta tus datos en formato JSON para compartirlos,
-            hacer copias de seguridad o cargarlos fácilmente en PuraMoto en otro dispositivo.
+            hacer copias de seguridad o cargarlos fácilmente en PuraMotor en otro dispositivo.
         </p>
         <p>
             Recuerda: al ser almacenamiento local, si desinstalas la aplicación, la información no exportada
@@ -218,33 +215,36 @@
 
         <button id="openTermsModal" class="terms-button">Términos y Condiciones</button>
     </div>
+    <foote>
+        <p>CRAD Studios 2025</p>
+    </foote>
 
     <div id="termsModal" class="modal"> <div class="modal-content">
             <div class="modal-header">
-                <h2>Términos y Condiciones de Uso - PuraMoto</h2>
+                <h2>Términos y Condiciones de Uso - PuraMotor</h2>
                 <span class="close-button" id="closeTermsModal">&times;</span>
             </div>
             <div class="modal-body">
                 <p>Última actualización: 8 de mayo de 2025</p>
 
-                <p>Bienvenido/a a PuraMoto (en adelante, "la Aplicación"), desarrollada por CRAD Studios. Estos Términos y Condiciones (en adelante, "Términos") rigen el uso que usted haga de la Aplicación. Al descargar, instalar o utilizar la Aplicación, usted acepta estar sujeto/a a estos Términos.</p>
+                <p>Bienvenido/a a PuraMotor (en adelante, "la Aplicación"), desarrollada por CRAD Studios. Estos Términos y Condiciones (en adelante, "Términos") rigen el uso que usted haga de la Aplicación. Al descargar, instalar o utilizar la Aplicación, usted acepta estar sujeto/a a estos Términos.</p>
 
                 <h3>1. Descripción de la Aplicación</h3>
-                <p>PuraMoto es una aplicación móvil diseñada para ayudar a los usuarios a registrar y gestionar información personal relevante para motociclistas, así como información detallada de sus motocicletas, incluyendo mantenimientos, consumos de combustible y la capacidad de generar reportes.</p>
+                <p>PuraMotor es una aplicación móvil diseñada para ayudar a los usuarios a registrar y gestionar información personal relevante sobre sus vehículos, así como información detallada de los mismos, incluyendo mantenimientos, consumos de combustible y la capacidad de generar reportes.</p>
 
                 <h3>2. Almacenamiento de Datos</h3>
-                <p><strong>Almacenamiento Local:</strong> Toda la información que usted ingrese en PuraMoto, incluyendo datos personales (nombre, cédula, tipo de sangre, contacto de emergencia) e información de motocicletas (placa, marca, modelo, año, VIN, color, kilometraje, registros de mantenimiento, registros de consumo), se almacena exclusivamente de forma local en el dispositivo donde la Aplicación está instalada. CRAD Studios no tiene acceso a, ni almacena, ninguno de sus datos personales o de sus motocicletas en servidores externos o en la nube.</p>
+                <p><strong>Almacenamiento Local:</strong> Toda la información que usted ingrese en PuraMotor, incluyendo datos personales (nombre, cédula, tipo de sangre, contacto de emergencia) e información de vehículos (placa, marca, modelo, año, VIN, color, kilometraje, registros de mantenimiento, registros de consumo), se almacena exclusivamente de forma local en el dispositivo donde la Aplicación está instalada. CRAD Studios no tiene acceso a, ni almacena, ninguno de sus datos personales o de sus vehículos en servidores externos o en la nube.</p>
                 <p><strong>Responsabilidad del Usuario:</strong> Usted es el único responsable de la información que ingresa y gestiona a través de la Aplicación, así como de la seguridad de su dispositivo.</p>
 
                 <h3>3. Exportación e Importación de Datos</h3>
-                <p>PuraMoto le permite exportar sus datos en formato PDF o JSON. Esta función está diseñada para que pueda realizar copias de seguridad de su información, compartirla según su criterio o transferirla a otro dispositivo donde tenga instalada la Aplicación. Usted es responsable de la gestión y seguridad de los archivos exportados.</p>
+                <p>PuraMotor le permite exportar sus datos en formato PDF o JSON. Esta función está diseñada para que pueda realizar copias de seguridad de su información, compartirla según su criterio o transferirla a otro dispositivo donde tenga instalada la Aplicación. Usted es responsable de la gestión y seguridad de los archivos exportados.</p>
 
                 <h3>4. Pérdida de Datos</h3>
                 <p><strong>Eliminación de la Aplicación:</strong> Dado que todos los datos se almacenan localmente, si usted desinstala la Aplicación de su dispositivo, toda la información contenida en ella (que no haya sido previamente exportada) se eliminará permanentemente. CRAD Studios no se hace responsable por la pérdida de datos resultante de la desinstalación de la Aplicación, fallos del dispositivo, pérdida o robo del mismo, o cualquier otra circunstancia ajena al funcionamiento normal de la Aplicación.</p>
                 <p><strong>Sin Copias de Seguridad Automáticas en la Nube:</strong> La Aplicación no realiza copias de seguridad automáticas de sus datos en la nube. Le recomendamos utilizar la función de exportación regularmente para salvaguardar su información.</p>
 
                 <h3>5. Uso Previsto</h3>
-                <p>La Aplicación está destinada para uso personal, con el fin de organizar y llevar un registro de la información relacionada con sus motocicletas y su perfil como motociclista. Cualquier uso indebido de la aplicación es responsabilidad exclusiva del usuario.</p>
+                <p>La Aplicación está destinada para uso personal, con el fin de organizar y llevar un registro de la información relacionada con sus vehículos y su perfil como conductor. Cualquier uso indebido de la aplicación es responsabilidad exclusiva del usuario.</p>
 
                 <h3>6. Propiedad Intelectual</h3>
                 <p>La Aplicación, incluyendo su diseño, código fuente, logotipos y contenido (excluyendo los datos ingresados por el usuario), es propiedad de CRAD Studios y está protegida por las leyes de propiedad intelectual.</p>
@@ -258,7 +258,7 @@
                 <h3>9. Contacto</h3>
                 <p>Si tiene alguna pregunta o inquietud sobre estos Términos o la Aplicación, puede contactarnos en: <a href="mailto:desarrolloandroidcr@gmail.com" style="color: var(--color-primary-accent);">desarrolloandroidcr@gmail.com</a>.</p>
 
-                <p>Al utilizar PuraMoto, usted reconoce que ha leído, entendido y aceptado estos Términos y Condiciones.</p>
+                <p>Al utilizar PuraMotor, usted reconoce que ha leído, entendido y aceptado estos Términos y Condiciones.</p>
             </div>
             <div class="modal-footer">
                 <button id="acceptTermsButton" class="modal-button">Entendido</button>
@@ -266,10 +266,6 @@
         </div>
     </div>
 
-    <footer>
-        <p>&copy; <span id="currentYear"></span> PuraMoto por CRAD Studios. Todos los derechos reservados.</p>
-        <p>Contacto: <a href="mailto:desarrolloandroidcr@gmail.com" style="color: var(--color-primary-accent);">desarrolloandroidcr@gmail.com</a></p>
-    </footer>
 
     <script>
         // Script para el Modal
